# hucoder

./: README.md  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
src/hucoder/: __init__.py
src/hucoder/core/: tools.py
src/hucoder/core/clients/: __init__.py  commons.py  deepseek.py
