[project]
name = "hucoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jack", email = "18551681083@163.com" }
]
requires-python = ">=3.14"
dependencies = [
    "openai>=2.46.0",
]

[project.scripts]
hucoder = "hucoder:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
